<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!-- a. Login
            el login solo aparece al arrancar la aplicación, no debe de volver a ser accesible -->
        <!--item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" /-->

        <!-- b. Mi perfil -->
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_tag_faces_24"
            android:title="@string/menu_miperfil" />

        <!-- c. Sugerencias -->
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_whatshot_24"
            android:title="@string/menu_sugerencias" />

        <!-- d. Me gusta -->
        <item
            android:id="@+id/nav_megusta"
            android:icon="@drawable/ic_baseline_thumb_up_alt_24"
            android:title="@string/menu_megusta" />

        <!-- e. Visitados -->
        <item
            android:id="@+id/nav_visitados"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_visitados" />

        <!-- f. Mensajes-->
        <item
            android:id="@+id/nav_mensajes"
            android:icon="@drawable/ic_baseline_textsms_24"
            android:title="@string/menu_mensajes" />

        <!-- g. Ajustes -->
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_baseline_engineering_24"
            android:title="@string/menu_ajustes" />

    </group>
</menu>