<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fMensajes.ChatFragment">


    <Button
        android:id="@+id/btAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btAtras"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
    />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/hintMessage"
        android:ems="15"
        android:layout_marginBottom="2dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btEnviar" />
    <Button
        android:id="@+id/btEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btEnviar"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etMensaje"

        android:layout_marginTop="2dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAtras"
        app:layout_constraintBottom_toTopOf="@+id/btEnviar"
 />


</androidx.constraintlayout.widget.ConstraintLayout>