<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bMiperfil.MiPerfilFragment">

    <!--
    <ImageView
        android:id="@+id/imFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/foto2" /> -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/foto2"
        app:civ_border_color="#FF000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imFoto">

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintNombre"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/etLocalizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintLolizacion"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="6"
                android:hint="@string/hintEdad"
                android:inputType="number" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etEstatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="6"
                android:hint="@string/hintEstatura"
                android:inputType="number" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="6"
                android:hint="@string/hintPeso"
                android:inputType="number" />

        </LinearLayout>
<!--
        <Space
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etFormacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintFormacion"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etIngresos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintIngresos"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etDsTabaco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintdsTabaco"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etDsAlcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintdsAlcohol"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etDsAlucinogenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintdsAlucinogenos"
                android:inputType="textPersonName" />
        </LinearLayout>
-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintBio"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/bActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bActualziar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>